--- a/src/assets/styles/components/inputs.css
+++ b/src/assets/styles/components/inputs.css
@@ -18,14 +18,20 @@
 }
 
 .button-cover {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
 }
 
 .button-switch {
   position: relative;
-  
+
   width: 323px;
   height: 39px;
   border-radius: 0.625rem;
@@ -39,12 +45,12 @@
 
 .checkbox {
   position: relative;
-  
+
   width: 100%;
   height: 100%;
   margin: 0;
   padding: 0;
-  
+
   opacity: 0;
   cursor: pointer;
   z-index: 3;
@@ -56,9 +62,13 @@
 
 .layer {
   background-color: #edf2f7;
-  
+
   width: 100%;
-  
+
+  -webkit-transition: 0.3s ease all;
+
+  -o-transition: 0.3s ease all;
+
   transition: 0.3s ease all;
   z-index: 1;
 }
@@ -68,11 +78,13 @@
 .button-switch .knobs span {
   position: absolute;
   top: 3px;
-  
+
   width: 149px;
   height: 33px;
   padding: 10px 27px;
   border-radius: 0.625rem 0 0 0.625rem;
+  -webkit-transition: 0.3s ease all;
+  -o-transition: 0.3s ease all;
   transition: 0.3s ease all;
 }
 
@@ -81,18 +93,20 @@
 .placing-order .button-switch .knobs span {
   position: absolute;
   top: 3px;
-  
+
   width: calc((100% - 25px) / 2);
   height: 33px;
   padding: 10px 27px;
   border-radius: 0.625rem 0 0 0.625rem;
+  -webkit-transition: 0.3s ease all;
+  -o-transition: 0.3s ease all;
   transition: 0.3s ease all;
 }
 
 .button-switch .knobs:before {
   content: "";
   left: 5px;
-  
+
   background-color: var(--primary-color);
 }
 
@@ -104,11 +118,11 @@
 .button-switch .knobs span {
   display: inline-block;
   left: 5px;
-  
+
   z-index: 1;
 }
 
-.button-switch .checkbox:checked + .knobs:before {
+.button-switch .checkbox:checked+.knobs:before {
   left: 169px;
 
   background-color: var(--primary-color);
@@ -116,37 +130,52 @@
   border-radius: 0 0.625rem 0.625rem 0;
 }
 
-.placing-order .button-switch .checkbox:checked + .knobs:before {
+.placing-order .button-switch .checkbox:checked+.knobs:before {
   left: calc((100% - 25px) / 2 + 20px);
-  
+
   background-color: var(--primary-color);
-  
+
   border-radius: 0 0.625rem 0.625rem 0;
 }
 
-.button-switch .checkbox:checked + .knobs:after {
+.button-switch .checkbox:checked+.knobs:after {
   z-index: 1;
 }
 
-.button-switch .checkbox:checked ~ .layer {
+.button-switch .checkbox:checked~.layer {
   background-color: #edf2f7;
 }
 
 .form-group {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
 
   margin-bottom: 1rem;
 }
 
 .form-group-row {
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: row;
   flex-direction: row;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between;
 }
 
 .modal-book-table .form-group-row,
 .choose-time .form-group-row {
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: row;
   flex-direction: row;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
   gap: 1rem;
 }
@@ -160,6 +189,8 @@
 }
 
 .small-input {
+  -webkit-box-flex: 1;
+  -ms-flex: 1;
   flex: 1;
 
   max-width: 6.25rem;
@@ -169,6 +200,8 @@
   border-color: #4e9f37;
   outline: none;
 
+  -webkit-box-shadow: 0 0 3px rgba(0, 123, 255, 0.3);
+
   box-shadow: 0 0 3px rgba(0, 123, 255, 0.3);
 }
 
@@ -177,14 +210,21 @@
   border-color: var(--secondary-color);
   outline: none;
 
+  -webkit-box-shadow: 0 0 3px rgba(0, 123, 255, 0.3);
+
   box-shadow: 0 0 3px rgba(0, 123, 255, 0.3);
 }
 
 .form-input,
-.form-select {  
+.form-select {
   width: 100%;
   border: none;
+  -webkit-box-sizing: border-box;
   box-sizing: border-box;
+
+  -webkit-appearance: none;
+
+  -moz-appearance: none;
 
   appearance: none;
 }
@@ -211,31 +251,76 @@
   border-radius: 0.625rem;
   outline: none;
 
+  -webkit-transition:
+    border-color 0.3s,
+    -webkit-box-shadow 0.3s;
+
+  transition:
+    border-color 0.3s,
+    -webkit-box-shadow 0.3s;
+
+  -o-transition:
+    border-color 0.3s,
+    box-shadow 0.3s;
+
   transition:
     border-color 0.3s,
     box-shadow 0.3s;
+
+  transition:
+    border-color 0.3s,
+    box-shadow 0.3s,
+    -webkit-box-shadow 0.3s;
 }
 
 .input-wrapper:has(.telephone) {
   padding: 0.625rem 1rem;
 }
 
+.form-input::-webkit-input-placeholder {
+  opacity: 1;
+}
+
+.form-input::-moz-placeholder {
+  opacity: 1;
+}
+
+.form-input:-ms-input-placeholder {
+  opacity: 1;
+}
+
+.form-input::-ms-input-placeholder {
+  opacity: 1;
+}
+
 .form-input::placeholder {
   opacity: 1;
 }
 
-.form-input:placeholder-shown + .placeholder-star {
+.form-input:-moz-placeholder-shown+.placeholder-star {
+  opacity: 1;
+}
+
+.form-input:-ms-input-placeholder+.placeholder-star {
+  opacity: 1;
+}
+
+.form-input:placeholder-shown+.placeholder-star {
   opacity: 1;
 }
 
 .placeholder-star {
   position: absolute;
   top: 50%;
-  
+
   opacity: 0;
-  
+
+  -webkit-transform: translateY(-50%);
+
+  -ms-transform: translateY(-50%);
+
   transform: translateY(-50%);
-  
+
   pointer-events: none;
 }
 
@@ -260,11 +345,27 @@
   left: calc(15px + 15.7ch);
 }
 
+.form-input:focus::-webkit-input-placeholder {
+  opacity: 0;
+}
+
+.form-input:focus::-moz-placeholder {
+  opacity: 0;
+}
+
+.form-input:focus:-ms-input-placeholder {
+  opacity: 0;
+}
+
+.form-input:focus::-ms-input-placeholder {
+  opacity: 0;
+}
+
 .form-input:focus::placeholder {
   opacity: 0;
 }
 
-.form-input:focus + .placeholder-star {
+.form-input:focus+.placeholder-star {
   display: none;
 }
 
@@ -277,16 +378,22 @@
 
 .select-label {
   position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
-  
+
   background-color: #fff;
-  
+
   padding: 0.625rem 1rem;
   border: 1px solid #ddd;
   border-radius: 0.625rem;
-  
+
   cursor: pointer;
 }
 
@@ -295,15 +402,36 @@
   position: absolute;
   right: 1rem;
   top: 50%;
-  
+
   border: 5px solid transparent;
   border-radius: 3px;
   border-top-color: #aaa;
-  
+
+  -webkit-transition:
+    border-color 0.3s,
+    -webkit-box-shadow 0.3s;
+
   transition:
-  border-color 0.3s,
-  box-shadow 0.3s;
-  
+    border-color 0.3s,
+    -webkit-box-shadow 0.3s;
+
+  -o-transition:
+    border-color 0.3s,
+    box-shadow 0.3s;
+
+  transition:
+    border-color 0.3s,
+    box-shadow 0.3s;
+
+  transition:
+    border-color 0.3s,
+    box-shadow 0.3s,
+    -webkit-box-shadow 0.3s;
+
+  -webkit-transform: translateY(-50%);
+
+  -ms-transform: translateY(-50%);
+
   transform: translateY(-50%);
 }
 
@@ -313,20 +441,24 @@
   top: 100%;
   left: 0;
   overflow-y: auto;
-  
+
   background: #fff;
-  
+
   max-height: 12.5rem;
   width: 100%;
   border: 1px solid #ddd;
   border-radius: 0.625rem;
-  
+
   z-index: 10;
 }
 
 .select-dropdown .select-option {
   padding: 0.625rem 1rem;
-  
+
+  -webkit-transition: background-color 0.2s;
+
+  -o-transition: background-color 0.2s;
+
   transition: background-color 0.2s;
   cursor: pointer;
 }
@@ -342,6 +474,7 @@
 .select-label:focus,
 .select-label.focused {
   border-color: #4e9f37;
+  -webkit-box-shadow: 0 0 3px rgba(0, 123, 255, 0.3);
   box-shadow: 0 0 3px rgba(0, 123, 255, 0.3);
   outline: none;
 }
@@ -349,13 +482,22 @@
 /* Custom checkbox */
 
 .radio-group {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
   gap: 0.625rem;
 }
 
 .radio-label {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
 
   cursor: pointer;
@@ -367,7 +509,7 @@
 
 .radio-custom {
   position: relative;
-  
+
   max-width: 1.25rem;
   max-height: 1.25rem;
   min-width: 1.25rem;
@@ -375,18 +517,26 @@
   margin-right: 0.625rem;
   border: 1px solid var(--secondary-color);
   border-radius: 50%;
-  
+
+  -webkit-transition:
+    background-color 0.3s,
+    border-color 0.3s;
+
+  -o-transition:
+    background-color 0.3s,
+    border-color 0.3s;
+
   transition:
     background-color 0.3s,
     border-color 0.3s;
 }
 
-.radio-input:checked + .radio-custom {
+.radio-input:checked+.radio-custom {
   background-color: var(--primary-color);
   border-color: var(--secondary-color);
 }
 
-.radio-input:checked + .radio-custom::after {
+.radio-input:checked+.radio-custom::after {
   content: "";
   position: absolute;
   top: 3px;
@@ -402,32 +552,48 @@
   border-color: var(--secondary-color);
 }
 
-.form-textarea {  
+.form-textarea {
   min-height: 7.5rem;
   width: 100%;
   padding: 0.75rem 1rem;
   border: 1px solid #dcdcdc;
   border-radius: 0.5rem;
   outline: none;
-  
+
   resize: none;
+  -webkit-box-shadow: none;
   box-shadow: none;
+  -webkit-transition:
+    border-color 0.3s,
+    -webkit-box-shadow 0.3s;
+  transition:
+    border-color 0.3s,
+    -webkit-box-shadow 0.3s;
+  -o-transition:
+    border-color 0.3s,
+    box-shadow 0.3s;
   transition:
     border-color 0.3s,
     box-shadow 0.3s;
+  transition:
+    border-color 0.3s,
+    box-shadow 0.3s,
+    -webkit-box-shadow 0.3s;
 }
 
 .form-textarea:focus {
   border-color: var(--secondary-color);
 
+  -webkit-box-shadow: 0 0 5px rgba(126, 53, 53, 0.3);
+
   box-shadow: 0 0 5px rgba(126, 53, 53, 0.3);
 }
 
-@media (width <= 960px) {
+@media (width <=960px) {
   .cart .button-switch {
     position: relative;
     overflow: hidden;
-    
+
     width: 926px;
     height: 39px;
     border-radius: 0.625rem;
@@ -439,12 +605,12 @@
     width: calc((100% - 25px) / 2);
   }
 
-  .cart .button-switch .checkbox:checked + .knobs:before {
+  .cart .button-switch .checkbox:checked+.knobs:before {
     left: calc((100% - 25px) / 2 + 20px);
   }
 }
 
-@media (width <= 420px) {
+@media (width <=420px) {
   .modal-change-address .button-switch {
     position: relative;
     overflow: hidden;
@@ -460,7 +626,7 @@
     width: calc((100% - 25px) / 2);
   }
 
-  .modal-change-address .button-switch .checkbox:checked + .knobs:before {
+  .modal-change-address .button-switch .checkbox:checked+.knobs:before {
     left: calc((100% - 25px) / 2 + 20px);
   }
 }
