--- a/src/assets/styles/components/map.css
+++ b/src/assets/styles/components/map.css
@@ -6,28 +6,48 @@
 }
 
 .map-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap-reverse;
   flex-wrap: wrap-reverse;
   overflow: hidden;
 
   border-radius: 10px;
 }
 
-.map-container > * {
+.map-container>* {
+  -webkit-box-flex: 1;
+  -ms-flex: 1 0 360px;
   flex: 1 0 360px;
 }
 
 .map-frame {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
   min-height: 500px;
 }
 
 .map-call-to-action {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
   row-gap: 3.5rem;
 
@@ -44,7 +64,7 @@
   max-width: 560px;
 }
 
-@media (width <= 960px) {
+@media (width <=960px) {
   .map {
     padding: 1.25rem 0.675rem;
   }
@@ -54,7 +74,7 @@
   }
 }
 
-@media (width <= 740px) {
+@media (width <=740px) {
   .map-call-to-action {
     min-height: 340px;
   }
@@ -64,8 +84,10 @@
   }
 }
 
-@media (width <= 395px) {
-  .map-container > * {
+@media (width <=395px) {
+  .map-container>* {
+    -webkit-box-flex: 1;
+    -ms-flex: 1 0 300px;
     flex: 1 0 300px;
   }
 
