--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -32,5 +32,6 @@ img {
   -webkit-user-drag: none;
   -webkit-user-select: none;
   -moz-user-select: none;
+  -ms-user-select: none;
   user-select: none;
 }
