--- a/src/assets/styles/poster.css
+++ b/src/assets/styles/poster.css
@@ -1,6 +1,7 @@
 /* Heeader */
 
 .site-logo-img {
+  -webkit-filter: invert(1);
   filter: invert(1);
 }
 
@@ -13,6 +14,7 @@
 }
 
 .header-top-telephone img {
+  -webkit-filter: invert(1);
   filter: invert(1);
 }
 
@@ -31,17 +33,32 @@
 /* Breadcrumbs */
 
 .breadcrumb {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
 
   padding: 1.25rem 0;
 }
 
 .breadcrumb ol {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: row;
   flex-direction: row;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
 
   margin: 0;
@@ -49,7 +66,11 @@
 }
 
 .breadcrumb li {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
 }
 
@@ -60,8 +81,14 @@
 }
 
 .home-link {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
 }
 
@@ -82,7 +109,12 @@
 }
 
 .article-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
   row-gap: 3.75rem;
 
@@ -90,12 +122,20 @@
 
   border-radius: 0.625rem;
 
+  -webkit-box-shadow: 0 -6px 35px 6px rgba(0, 0, 0, 0.05);
+
   box-shadow: 0 -6px 35px 6px rgba(0, 0, 0, 0.05);
 }
 
 .article-img {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
   overflow: hidden;
 
@@ -105,12 +145,19 @@
 .article-img img {
   width: 100%;
   height: 100%;
+  -o-object-fit: cover;
   object-fit: cover;
+  -o-object-position: center;
   object-position: center;
 }
 
 .article-textcontent {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
   row-gap: 3.75rem;
 
@@ -126,12 +173,18 @@
 }
 
 .recomendations-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
   row-gap: 2.5rem;
 }
 
 .recomendations-wrapper {
+  display: -ms-grid;
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
   grid-template-rows: repeat(auto-fill, minmax(400px, 1fr));
@@ -140,13 +193,23 @@
 
 .poster-container-item {
   position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
+  -webkit-box-pack: start;
+  -ms-flex-pack: start;
   justify-content: flex-start;
   overflow: hidden;
 
   height: 100%;
   border-radius: 0.625rem;
+
+  -webkit-transition: background 0.3s step-end;
+
+  -o-transition: background 0.3s step-end;
 
   transition: background 0.3s step-end;
 }
@@ -155,15 +218,26 @@
   position: absolute;
   width: 100%;
   height: 100%;
+  -o-object-fit: cover;
   object-fit: cover;
+  -o-object-position: center;
   object-position: center;
   z-index: -1;
 }
 
 .poster-item-content {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between;
+  -webkit-box-align: start;
+  -ms-flex-align: start;
   align-items: flex-start;
 
   padding: 1.25rem 2.5rem;
@@ -173,7 +247,12 @@
 }
 
 .poster-item-textcontent {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
   row-gap: 1.5rem;
 }
@@ -182,16 +261,17 @@
   max-width: 455px;
 }
 
-@media (width <= 1137px) {
+@media (width <=1137px) {
   .recomendations-wrapper {
     grid-template-rows: repeat(2, minmax(400px, 1fr));
   }
 }
 
-@media (width <= 960px) {
+@media (width <=960px) {
   /* Header */
 
   .site-logo-img {
+    -webkit-filter: invert(0);
     filter: invert(0);
   }
 
@@ -204,6 +284,7 @@
   }
 
   .header-top-telephone img {
+    -webkit-filter: invert(0);
     filter: invert(0);
   }
 
@@ -230,7 +311,12 @@
   }
 
   .article-textcontent {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
     row-gap: 1.5rem;
 
@@ -244,7 +330,12 @@
   }
 
   .recomendations-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
     row-gap: 1.25rem;
   }
@@ -254,13 +345,13 @@
   }
 }
 
-@media (width <= 767px) {
+@media (width <=767px) {
   .recomendations-wrapper {
     grid-template-rows: repeat(3, minmax(400px, 1fr));
   }
 }
 
-@media (width <= 575px) {
+@media (width <=575px) {
   .breadcrumb li:not(:last-child)::after {
     margin: 0 0.25rem;
   }
@@ -271,7 +362,7 @@
   }
 }
 
-@media (width <= 395px) {
+@media (width <=395px) {
   .recomendations-wrapper {
     grid-template-columns: repeat(auto-fill, minmax(330px, 1fr));
     grid-template-rows: repeat(3, minmax(300px, 1fr));
